Frontend issues and alignments

--- a/src/app/components/sidebar/sidebar.css
+++ b/src/app/components/sidebar/sidebar.css
@@ -44,15 +44,12 @@
     }
   }
 
-  /* .sidebarlink:focus {
-    text-decoration: none;
-    background-color: white;
-    color: #03AF9F;
-  } */
-  
+  /* responsiveness */
 
-   
-  
+  .sidebartop
+  {
+    height: 100vh;
+  }
     /* Handle hover state */
    
   
